src/test/deca/context/invalid/classmethode7.deca
class A{
    boolean a;
    int methode(){
        return a;
    }
}

{
    A a=new A();
    
}